--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel = "stylesheet" href="css/styles.css">
         <link rel = "stylesheet" href="hamburgers-master/dist/hamburgers.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <title>Ruben C. Arevalo</title>
+        <title>Ruben C. Arevalo - CV</title>
     </head>
+    <link rel = "shortcut icon" type = "image/x-icon" href="images/r-icon2.png">
     <body>
         <div id = "container">
             <div id="mobile-header">
@@ -16,8 +16,13 @@
                       <div class = "hamburger-inner"></div>
                     </div>
                 </div>
-                <div id = "mobile-logo" style="margin-left: 22.2%; margin-right: 22.2%;">
+                <div id = "mobile-logo">
                     <a href="index.html"><h3>Ruben C. Arevalo</h3></a>
+                </div>
+                <div id = "report-icon">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeSu_sZqwO_m42GKlmXKrA30hyTglQQY1N3V2PIcdGc87WbXg/viewform" target="_blank">
+                        <i class="far fa-flag"></i>
+                    </a>
                 </div>
             </div>
             <nav class = "nav-bar">
@@ -59,6 +64,7 @@
                     <div class = "education" id="educate">
                         <div id = "content">
                             <h1>Education</h1>
+                            <br>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;" id="city">Edinburg, TX</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="univ">University of Texas Rio Grande Valley</h3>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="grad">Expected: May 2023</h3>
@@ -86,6 +92,7 @@
                     <div class = "experience" id="exp">
                         <div id = "exp-content">
                             <h1>Experience</h1>
+                            <br>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;">McAllen, TX</h3>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="position">Customer Service Associate</h3>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="date">June 2019 - July 2019</h4>
@@ -95,12 +102,12 @@
                     <div class = "software-projects" id="software">
                         <div id = "software-content1">
                             <h1>Software Projects</h1>
+                            <br>
                             <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: HTML | CSS | JavaScript</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Look Video and Photography Website</h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed an implemented a multi-page web application for use by local photography business</li>
                             <br>
                             <hr>
-                            <br>
                         </div>
                         <div id = "software-content2">
                             <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: Java</h4>
@@ -111,6 +118,7 @@
                     <div class = "coursework" id="courses">
                         <div id = "coursework-content">
                             <h1>Relevant Coursework</h1>
+                            <br>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Completed Coursework</u></h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science I</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science II</li>
@@ -132,6 +140,7 @@
                 &copy; 2021 Ruben Christopher Arevalo.
             </div>
         </footer>
+        <script src="https://kit.fontawesome.com/44cd3f986c.js" crossorigin="anonymous"></script>
         <script src="js/load-nav.js"></script>
     </body>
 </html>
