--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <link rel = "shortcut icon" type = "image/x-icon" href="images/r-icon2.png">
     <body>
         <div id = "container">
+            <div class = "closed-screen" style="display: none;">
+                <div id = "overlay">
+                    <h1>This website is closed from 10:00 PM to 8:00 AM. Come back after
+                        this time period is over!
+                    </h1>
+                </div>
+            </div>
             <div id="mobile-header">
                 <div class = "hamburger hamburger--squeeze">
                     <div class = "hamburger-box">
