--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div id = "container">
             <div class = "closed-screen">
                 <div id = "overlay">
-                    <h1>This website is closed from 10:00 PM to 9:30 AM. Come back after
-                        this time period is over!
+                    <h1>This website is closed from 10:00 PM to 9:30 AM. Come back tomorrow
+                        morning!
                     </h1>
                 </div>
             </div>
