--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel = "stylesheet" href="hamburgers-master/dist/hamburgers.css">
         <title>Ruben C. Arevalo - CV</title>
     </head>
-    <link rel = "shortcut icon" type = "image/x-icon" href="images/r-icon2.png">
+    <link rel = "icon" href="images/r-icon2.png">
     <body oncontextmenu="return false;" style="overflow-y: hidden; overflow-x: hidden;">
         <div id = "container">
             <div class = "closed-screen">
