--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <title>Ruben C. Arevalo - CV</title>
     </head>
     <link rel = "icon" href="images/r-icon2.png">
-    <body oncontextmenu="return false;" style="overflow-y: hidden; overflow-x: hidden;">
+    <body oncontextmenu="return false;">
         <div id = "container">
-            <div class = "closed-screen">
+            <div class = "closed-screen" style="display: none;">
                 <div id = "overlay">
                     <h1>This website is closed from 10:00 PM to 9:30 AM. Come back tomorrow
                         morning!
