--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     </h1>
                 </div>
             </div>
-            <div id="mobile-header">
+            <div id="mobile-header" style="position: sticky; top: 0;">
                 <div class = "hamburger hamburger--squeeze">
                     <div class = "hamburger-box">
                       <div class = "hamburger-inner"></div>
