--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel = "shortcut icon" type="image/x-icon" href="images/r-icon2.png">
     <body oncontextmenu="return false;">
         <div id = "container">
-            <div class = "closed-screen" style="display: none;">
+            <div class = "closed-screen" style="overflow-x: hidden; overflow-y: hidden;">
                 <div id = "overlay">
                     <h1>This website is closed from 10:00 PM to 9:30 AM. Come back after
                         this time period is over!
