--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="index.html"><h3>Ruben C. Arevalo</h3></a>
                 </div>
                 <ul class = "nav-list">
-                    <li><a href="#">About Me</a></li>
+                    <li><a href="#intro">About Me</a></li>
                     <li><a href="#educate">Education</a></li>
                     <li><a href="#exp">Experience</a></li>
                     <li><a href="#software">Software Projects</a></li>
