--- a/index.html
+++ b/index.html
@@ -18,19 +18,21 @@
                     </h1>
                 </div>
             </div>
-            <div id="mobile-header">
-                <div class = "hamburger hamburger--squeeze">
-                    <div class = "hamburger-box">
-                      <div class = "hamburger-inner"></div>
+            <div class = "mobile-container">
+                <div id="mobile-header">
+                    <div class = "hamburger hamburger--squeeze">
+                        <div class = "hamburger-box">
+                          <div class = "hamburger-inner"></div>
+                        </div>
                     </div>
-                </div>
-                <div id = "mobile-logo">
-                    <a href="index.html"><h3>Ruben C. Arevalo</h3></a>
-                </div>
-                <div id = "report-icon">
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeSu_sZqwO_m42GKlmXKrA30hyTglQQY1N3V2PIcdGc87WbXg/viewform" target="_blank">
-                        <i class="far fa-flag"></i>
-                    </a>
+                    <div id = "mobile-logo">
+                        <a href="index.html"><h3>Ruben C. Arevalo</h3></a>
+                    </div>
+                    <div id = "report-icon">
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeSu_sZqwO_m42GKlmXKrA30hyTglQQY1N3V2PIcdGc87WbXg/viewform" target="_blank">
+                            <i class="far fa-flag"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
             <nav class = "nav-bar">
