--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Ruben C. Arevalo - CV</title>
     </head>
     <link rel = "shortcut icon" type = "image/x-icon" href="images/r-icon2.png">
-    <body style="overflow-x: none; overflow-y: none;">
+    <body style="overflow-x: hidden; overflow-y: hidden;">
         <div id = "container">
             <div class = "closed-screen">
                 <div id = "overlay">
