--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div id = "container">
             <div class = "closed-screen">
                 <div id = "overlay">
-                    <h1>This website is closed from 10:00 PM to 9:30 AM. Come back after
-                        this time period is over!
+                    <h1>
+                        This website is closed from 10:00 PM to 9:30 AM.
                     </h1>
                 </div>
             </div>
