--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <title>Ruben C. Arevalo - CV</title>
     </head>
     <link rel = "shortcut icon" type = "image/x-icon" href="images/r-icon2.png">
-    <body style="overflow-x: hidden; overflow-y: hidden;">
+    <body>
         <div id = "container">
-            <div class = "closed-screen">
+            <div class = "closed-screen" style="display: none;">
                 <div id = "overlay">
                     <h1>
                         This website is closed from 10:00 PM to 9:30 AM.
