--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang ="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="robots" content="noindex">
         <link rel = "stylesheet" href="css/styles.css">
         <link rel = "stylesheet" href="hamburgers-master/dist/hamburgers.css">
         <title>Ruben C. Arevalo - CV</title>
     </head>
-    <link rel = "shortcut icon" type = "image/x-icon" href="images/r-icon2.png">
+    <link rel = "icon" href="images/r-icon2.png">
     <body>
         <div id = "container">
             <div class = "closed-screen" style="display: none;">
@@ -18,37 +18,33 @@
                     </h1>
                 </div>
             </div>
-            <div class = "mobile-container">
-                <div id="mobile-header">
-                    <div class = "hamburger hamburger--squeeze">
-                        <div class = "hamburger-box">
-                          <div class = "hamburger-inner"></div>
-                        </div>
+            <div id="mobile-header">
+                <div class = "hamburger hamburger--squeeze">
+                    <div class = "hamburger-box">
+                      <div class = "hamburger-inner"></div>
                     </div>
-                    <div id = "mobile-logo">
-                        <a href="index.html"><h3>Ruben C. Arevalo</h3></a>
-                    </div>
-                    <div id = "report-icon">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeSu_sZqwO_m42GKlmXKrA30hyTglQQY1N3V2PIcdGc87WbXg/viewform" target="_blank">
-                            <i class="far fa-flag"></i>
-                        </a>
-                    </div>
+                </div>
+                <div id = "mobile-logo">
+                    <a href="index.html"><h3>Ruben C. Arevalo</h3></a>
+                </div>
+                <div id = "report-icon">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeSu_sZqwO_m42GKlmXKrA30hyTglQQY1N3V2PIcdGc87WbXg/viewform" target="_blank">
+                        <i class="far fa-flag"></i>
+                    </a>
                 </div>
             </div>
             <nav class = "nav-bar">
+                <div id = "logo">
+                    <a href="index.html"><h3>Ruben C. Arevalo</h3></a>
+                </div>
                 <ul class = "nav-list">
-                    <div id = "logo">
-                        <a href="index.html"><h3>Ruben C. Arevalo</h3></a>
-                    </div>
                     <li><a href="#">About Me</a></li>
                     <li><a href="#educate">Education</a></li>
                     <li><a href="#exp">Experience</a></li>
                     <li><a href="#software">Software Projects</a></li>
                     <li><a href="#courses">Relevant Coursework</a></li>
-                    <div class = "report-container">
-                        <li id="web-report"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeSu_sZqwO_m42GKlmXKrA30hyTglQQY1N3V2PIcdGc87WbXg/viewform" target="_blank" title="Report an issue"><i class="far fa-flag"></i></a></li>
-                    </div>
                 </ul>
+                <button class="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeSu_sZqwO_m42GKlmXKrA30hyTglQQY1N3V2PIcdGc87WbXg/viewform" target="_blank"><i class="far fa-flag"></i>Report</a></button>
             </nav>
             <div class = "intro-section">
                 <div class = "row">
@@ -146,15 +142,14 @@
         </div>
         <footer>
             <div id = "social-media-links">
-                <a href="https://www.linkedin.com/in/ruben-arevalo-4944251b7/" id="color-1" target="_blank">Linkedin</a>
-                <a href="https://github.com/rchrisarevalo" id="color-2" target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com/in/ruben-arevalo-4944251b7/" target="_blank">Linkedin</a>
+                <a href="https://github.com/rchrisarevalo" target="_blank">GitHub</a>
             </div>
             <div id = "copyright">
                 &copy; 2021 Ruben Christopher Arevalo.
             </div>
         </footer>
         <script src="https://kit.fontawesome.com/44cd3f986c.js" crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="js/load-nav.js"></script>
     </body>
 </html>
