--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                             Hi everyone! My name is Ruben Arevalo. I am currently a student at the University of Texas-Rio Grande Valley.
                             I am currently pursuing my bachelor's degree in computer engineering with my concentration focusing on
                             software. Since I was a high school student, I always found the concept of programming intriguing, thinking
-                            about how much it can change the world in so many different ways. This led to me to develop a huge interest
-                            in learning about software development, since there are so many software programs out there in the Internet,
+                            about how much several lines of code can change the world in so many different ways. This led to me to develop 
+                            a huge interest in learning about software development, since there are so many software programs out there in the Internet,
                             whether they'd be web applications, server-side applications, etc. Without them, we wouldn't be where we are
                             today in terms of how much technology has impacted our lives.
                         </p>
