--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                             Hi everyone! My name is Ruben Arevalo. I am currently a student at the University of Texas-Rio Grande Valley.
                             I am currently pursuing my bachelor's degree in computer engineering with my concentration focusing on
                             software. Since I was a high school student, I always found the concept of programming intriguing, thinking
-                            about how much several lines of code can change the world in so many different ways. This led to me to develop 
-                            a huge interest in learning about software development, since there are so many software programs out there in the Internet,
+                            about how much it can change the world in so many different ways. This led to me to develop a huge interest
+                            in learning about software development, since there are so many software programs out there in the Internet,
                             whether they'd be web applications, server-side applications, etc. Without them, we wouldn't be where we are
                             today in terms of how much technology has impacted our lives.
                         </p>
@@ -81,7 +81,7 @@
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="grad">Expected: May 2023</h3>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="degree"><i>B.S. in Computer Engineering</i></h4>
                             <br>
-                            <h3 style="font-weight: 500; margin-left: 5%; margin-right: 5%;"><u>Organizations</u></h3>
+                            <h3 style="font-weight: 500; margin-left: 5%; margin-right: 5%;" id="org"><u>Organizations</u></h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Student Leadership Academy</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Google Developer Student Club</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Association for Computing Machinery</li>
@@ -91,12 +91,13 @@
                             <br>
                             <hr>
                             <br>
+                            <br>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;" id="city">McAllen, TX</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="college">South Texas College</h3>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="grad">Graduation date: May 2019</h3>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="degree"><i>A.S. in Computer Science</i></h4>
                             <br>
-                            <h3 style="font-weight: 500; margin-left: 5%; margin-right: 5%;"><u>Organizations</u></h3>
+                            <h3 style="font-weight: 500; margin-left: 5%; margin-right: 5%;" id="org"><u>Organizations</u></h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Intramural Soccer</li>
                         </div>
                     </div>
@@ -117,6 +118,7 @@
                             <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: HTML | CSS | JavaScript</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Look Video and Photography Website</h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed an implemented a multi-page web application for use by local photography business</li>
+                            <br>
                             <br>
                             <hr>
                         </div>
