--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <br>
                             <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: HTML | CSS | JavaScript</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Look Video and Photography Website</h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed an implemented a multi-page web application for use by local photography business</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a multi-page web application for use by local photography business</li>
                             <br>
                             <br>
                             <hr>
