--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <title>Ruben C. Arevalo - CV</title>
     </head>
     <link rel = "icon" href="images/r-icon2.png">
-    <body>
+    <body style="overflow: none;">
         <div id = "container">
-            <div class = "closed-screen" style="display: none;">
+            <div class = "closed-screen">
                 <div id = "overlay">
                     <h1>
                         This website is closed from 10:00 PM to 9:30 AM.
