--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             Hi everyone! My name is Ruben Arevalo. I am currently a student at the University of Texas-Rio Grande Valley.
                             I am currently pursuing my bachelor's degree in computer engineering with my concentration focusing on
                             software. Since I was a high school student, I always found the concept of programming intriguing, thinking
-                            about how much it can change the world in so many different ways. This led to me to develop a huge interest
+                            about how much several lines of code can change the world in so many ways. This led to me to develop a huge interest
                             in learning about software development, since there are so many software programs out there in the Internet,
                             whether they'd be web applications, server-side applications, etc. Without them, we wouldn't be where we are
                             today in terms of how much technology has impacted our lives.
@@ -118,7 +118,7 @@
                             <br>
                             <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: HTML | CSS | JavaScript</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Look Video and Photography Website</h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed an implemented a multi-page web application for use by local photography business</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a multi-page web application for use by local photography business</li>
                             <br>
                             <br>
                             <hr>
