--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
         <title>Ruben C. Arevalo - CV</title>
     </head>
     <link rel = "icon" href="images/r-icon2.png">
-    <body>
+    <body style="overflow: hidden;">
         <div id = "container">
-            <div class = "closed-screen" style="display: none;">
+            <div class = "closed-screen">
                 <div id = "overlay">
                     <h1>
-                        This website is closed from 10:00 PM to 9:30 AM.
+                        Website Operating Hours: 10:00 AM - 11:30 PM
+                        Closed for today! Come back tomorrow!
                     </h1>
                 </div>
             </div>
