--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <div class = "closed-screen">
                 <div id = "overlay">
                     <h1>
-                        Website Operating Hours: 10:00 AM - 11:30 PM
+                        Website Operating Hours: 
+                        <p>10:00 AM - 11:30 PM</p>
                         Closed for today! Come back tomorrow!
                     </h1>
                 </div>
