--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <title>Ruben C. Arevalo - CV</title>
     </head>
     <link rel = "icon" href="images/r-icon2.png">
-    <body style="overflow: none;">
+    <body>
         <div id = "container">
-            <div class = "closed-screen">
+            <div class = "closed-screen" style="display: none;">
                 <div id = "overlay">
                     <h1>
                         Website Operating Hours: 
