--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>Ruben C. Arevalo - CV</title>
     </head>
     <link rel = "icon" href="images/r-icon2.png">
-    <body style="overflow: none;">
+    <body style="overflow: hidden;">
         <div id = "container">
             <div class = "closed-screen">
                 <div id = "overlay">
