--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
             <div class = "closed-screen" style="display: none;">
                 <div id = "overlay">
                     <h1>
-                        Website Operating Hours: 
-                        <p>10:00 AM - 11:30 PM</p>
-                        Closed for today! Come back tomorrow!
+                        This website is closed from 11:30 PM to 10:00 AM.
                     </h1>
                 </div>
             </div>
@@ -62,7 +60,7 @@
                             Hi everyone! My name is Ruben Arevalo. I am currently a student at the University of Texas-Rio Grande Valley.
                             I am currently pursuing my bachelor's degree in computer engineering with my concentration focusing on
                             software. Since I was a high school student, I always found the concept of programming intriguing, thinking
-                            about how much several lines of code can change the world in so many ways. This led to me to develop a huge interest
+                            about how much it can change the world in so many different ways. This led to me to develop a huge interest
                             in learning about software development, since there are so many software programs out there in the Internet,
                             whether they'd be web applications, server-side applications, etc. Without them, we wouldn't be where we are
                             today in terms of how much technology has impacted our lives.
@@ -120,7 +118,7 @@
                             <br>
                             <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: HTML | CSS | JavaScript</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Look Video and Photography Website</h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a multi-page web application for use by local photography business</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed an implemented a multi-page web application for use by local photography business</li>
                             <br>
                             <br>
                             <hr>
@@ -156,12 +154,20 @@
             </div>
         </div>
         <footer>
-            <div id = "social-media-links">
-                <a href="https://www.linkedin.com/in/ruben-arevalo-4944251b7/" target="_blank">Linkedin</a>
-                <a href="https://github.com/rchrisarevalo" target="_blank">GitHub</a>
-            </div>
-            <div id = "copyright">
-                &copy; 2021 Ruben Christopher Arevalo.
+            <div id = "footer-container">
+                <div id = "last-updated">
+                    <script>document.write("Last modified:")</script>
+                    <script>
+                        document.write(document.lastModified);
+                    </script>
+                </div>
+                <div id = "copyright">
+                    &copy; 2021 Ruben Christopher Arevalo
+                </div>
+                <div id = "social-media-links">
+                    <a href="https://www.linkedin.com/in/ruben-arevalo-4944251b7/" target="_blank">Linkedin</a>
+                    <a href="https://github.com/rchrisarevalo" target="_blank">GitHub</a>
+                </div>
             </div>
         </footer>
         <script src="https://kit.fontawesome.com/44cd3f986c.js" crossorigin="anonymous"></script>
