--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
                             <a href="mailto:rubenplayer105@gmail.com">rubenplayer105@gmail.com</a>
                         </p>
                         <br>
+                        <p style="font-weight: 500;">
+                            You can also visit my personal website at:
+                            <a href="https://rchrisarevalo.github.io/personal-web">rchrisarevalo.github.io/personal-web</a>
+                        </p>
+                        <br>
+                        <p style="font-weight: 500">
+                            You can download my resume by clicking <a href="/Resume (Updated June 2021).pdf" download>here.</a>
+                        </p>
                     </div>
                     <br>
                     <div class = "education" id="educate">
@@ -128,6 +136,15 @@
                             <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: HTML | CSS | JavaScript</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">CV (Curriculum Vitae) Website</h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a single-page application for displaying a CV that can be read by recruiters</li>
+                            <br>
+                            <br>
+                            <hr>
+                        </div>
+                        <div id = "software-content4">
+                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: React.js | CSS</h4>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Personal Website</h3>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a single-page application for displaying my works, whether they'd be web apps I designed 
+                            or other works connected to my personal hobbies, like photography</li>
                         </div>
                     </div>
                     <div class = "coursework" id="courses">
