--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class = "intro-section">
                 <div class = "row">
                     <div class = "profile-pic">
-                        <img src="images/IMG_20210614_192736_373.jpg">
+                        <img src="images/August 2021 Profile Pic 2.jpg">
                     </div>
                     <div class = "introduction" id="intro">
                         <h1 style="padding-top: 30px; padding-bottom: 30px;">About the author</h1>
@@ -66,11 +66,11 @@
                         <br>
                         <p style="font-weight: 500;">
                             You can also visit my personal website at:
-                            <a href="https://rchrisarevalo.github.io/personal-web">rchrisarevalo.github.io/personal-web</a>
+                            <a href="https://rchrisarevalo.github.io/personal-website">rchrisarevalo.github.io/personal-website</a>
                         </p>
                         <br>
                         <p style="font-weight: 500">
-                            You can download my resume by clicking <a href="/Resume (Updated July 2021).pdf" download>here.</a>
+                            You can download my resume by clicking <a href="Resume (Updated August 2021).pdf" download>here.</a>
                         </p>
                     </div>
                     <br>
@@ -141,7 +141,7 @@
                             <hr>
                         </div>
                         <div id = "software-content4">
-                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: React.js | CSS</h4>
+                            <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: React.js</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">Personal Website</h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Designed and implemented a single-page application for displaying my works, whether they'd be web apps I designed 
                             or other works connected to my personal hobbies, like photography</li>
@@ -158,6 +158,8 @@
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Digital Systems Engineering I</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Digital Systems Engineering II</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Object-Oriented Programming in Java</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Software Engineering I</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Networks</li>
                         </div>
                     </div>
                 </div>
