--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <br>
                             <h3 style="font-weight: 500; margin-left: 5%; margin-right: 5%;" id="org"><u>Organizations</u></h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Student Leadership Academy (2020-Present)</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Google Developer Student Club (2019-Present)</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Frontera Devs (formerly Google DSC UTRGV) (2019-Present)</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Association for Computing Machinery (2019-Present)</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">National Society for Leadership and Success (2020-2021)</li>
                         </div>
