New information added for class being taken this semester.

--- a/index.html
+++ b/index.html
@@ -160,6 +160,12 @@
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Object-Oriented Programming in Java</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Software Engineering I</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Networks</li>
+                            <br>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Current Courses (Fall 2021):</u></h3>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Data Structures and Algorithms</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Operating Systems</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Systems Programming</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Software Engineering II</li>
                         </div>
                     </div>
                 </div>
