Font size decreased.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class = "intro-section">
                 <div class = "row">
                     <div class = "profile-pic">
-                        <img src="images/August 2021 Profile Pic 2.jpg">
+                        <img src="images/OCTOBER 2021 PIC.jpg">
                     </div>
                     <div class = "introduction" id="intro">
                         <h1 style="padding-top: 30px; padding-bottom: 30px;">About the author</h1>
