LinkedIn profile link changed.

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     &copy; <script>document.write(new Date().getFullYear())</script> Ruben Christopher Arevalo
                 </div>
                 <div id = "social-media-links">
-                    <a href="https://www.linkedin.com/in/ruben-arevalo-4944251b7/" target="_blank">Linkedin</a>
+                    <a href="https://www.linkedin.com/in/rchrisarevalo/" target="_blank">Linkedin</a>
                     <a href="https://github.com/rchrisarevalo" target="_blank">GitHub</a>
                 </div>
             </div>
